--- a/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
+++ b/FreeAIr/UI/ToolWindows/ChatListToolWindowControl.xaml
@@ -57,6 +57,17 @@
                 VerticalAlignment="Center"
                 >
 
+                <CheckBox
+                    Margin="0,0,10,0"
+                    FontFamily="Cascadia Code"
+                    FontSize="11"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    VerticalContentAlignment="Center"
+                    Content="Panel"
+                    IsChecked="{Binding ShowChatListPanel}"
+                    />
+
                 <Button
                     Margin="5,2,5,2"
                     Content="{x:Static resources:Resources.UI_StartDiscussion}"
@@ -105,6 +116,7 @@
         <Grid
             Grid.Row="1"
             Grid.Column="0"
+            Visibility="{Binding ChatListVisibility}"
             >
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
@@ -194,6 +206,7 @@
         <GridSplitter
             Grid.Row="1"
             Grid.Column="1"
+            Visibility="{Binding ChatListVisibility}"
             ResizeDirection="Columns"
             Width="2"
             Margin="2,0,2,0"
@@ -204,7 +217,8 @@
         <!-- chat control -->
         <chat:ChatControl
             Grid.Row="1"
-            Grid.Column="2"
+            Grid.Column="{Binding ChatPanelColumn}"
+            Grid.ColumnSpan="{Binding ChatPanelColumnSpan}"
             x:Name="ChatControlName"
             Visibility="{Binding ChatPanelVisibility}"
             Chat="{Binding SelectedChat.Chat}"
