Preparation for Dialog improvements.

--- a/FreeAIr/UI/Chat/ChatControl.xaml
+++ b/FreeAIr/UI/Chat/ChatControl.xaml
@@ -15,8 +15,7 @@
     xmlns:embedillo="clr-namespace:FreeAIr.UI.Embedillo"
     xmlns:viewmodels="clr-namespace:FreeAIr.UI.ViewModels"
     xmlns:toolwindows="clr-namespace:FreeAIr.UI.ToolWindows"
-    xmlns:ui="clr-namespace:FreeAIr.UI"
-    xmlns:dialog="clr-namespace:MarkdownParser.UI.Dialog;assembly=MarkdownParser"
+    xmlns:ui="clr-namespace:FreeAIr.UI" xmlns:dialog="clr-namespace:FreeAIr.UI.Dialog"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
     x:Name="ChatControlName"
