--- a/FreeAIr/UI/Dialog/DialogControl.xaml
+++ b/FreeAIr/UI/Dialog/DialogControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="MarkdownParser.UI.Dialog.DialogControl"
+    x:Class="FreeAIr.UI.Dialog.DialogControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
