--- a/FreeAIr/UI/Dialog/DialogControl.xaml
+++ b/FreeAIr/UI/Dialog/DialogControl.xaml
@@ -3,65 +3,129 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dialog="clr-namespace:FreeAIr.UI.Dialog"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="800"
     x:Name="DialogControlName"
     >
+    <UserControl.Resources>
+        <DataTemplate x:Key="ReplicContentTemplate">
+            <Border
+                BorderBrush="#569CD6"
+                Margin="0,2,0,2"
+                BorderThickness="{Binding BorderThickness}"
+                HorizontalAlignment="{Binding HorizontalAlignment}"
+                >
 
-    <ScrollViewer
-        x:Name="ScrollViewerName"
-        HorizontalScrollBarVisibility="Auto"
-        VerticalScrollBarVisibility="Auto"
-        >
-        <ListView
-            x:Name="DialogListControl"
-            PreviewMouseWheel="OnFlowDocumentScrollViewerPreviewMouseWheel"
-            HorizontalAlignment="{Binding ElementName=DialogControlName, Path=HorizontalAlignment}"
-            VerticalAlignment="{Binding ElementName=DialogControlName, Path=VerticalAlignment}"
-            HorizontalContentAlignment="{Binding ElementName=DialogControlName, Path=HorizontalContentAlignment}"
-            VerticalContentAlignment="{Binding ElementName=DialogControlName, Path=VerticalContentAlignment}"
-            BorderBrush="{Binding ElementName=DialogControlName, Path=BorderBrush}"
-            BorderThickness="{Binding ElementName=DialogControlName, Path=BorderThickness}"
-            Foreground="{Binding ElementName=DialogControlName, Path=Foreground}"
-            Background="{Binding ElementName=DialogControlName, Path=Background}"
-            ItemsSource="{Binding ElementName=DialogControlName, Path=Dialog}"
-            Focusable="False"
-            >
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate TargetType="{x:Type ListViewItem}">
-                                <ContentPresenter />
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Border
-                        x:Name="ReplicBorder"
-                        BorderBrush="#569CD6"
-                        Margin="0,2,0,2"
-                        BorderThickness="{Binding BorderThickness}"
-                        HorizontalAlignment="{Binding HorizontalAlignment}"
+                <FlowDocumentScrollViewer
+                    HorizontalContentAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    VerticalContentAlignment="Stretch"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                    SizeChanged="FlowDocumentScrollViewer_SizeChanged"
+                    Document="{Binding Document}"
+                    >
+                </FlowDocumentScrollViewer>
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="ToolCallContentTemplate">
+            <!--  x:Name is a workaround for https://stackoverflow.com/questions/22108712/could-not-load-file-or-assembly-xceed-wpf-toolkit  -->
+            <xctk:SplitButton
+                Margin="0,0,5,0"
+                Padding="5,1,5,1"
+                MinWidth="200"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Stretch"
+                HorizontalContentAlignment="Right"
+                Foreground="{Binding ElementName=ForegroundButton, Path=Foreground}"
+                Background="{Binding ElementName=ForegroundButton, Path=Background}"
+                DropDownContentBackground="{Binding ElementName=ForegroundButton, Path=Background}"
+                Content="{Binding UIDescription}"
+                Command="{Binding ClickCommand}"
+                >
+                <xctk:SplitButton.DropDownContent>
+                    <StackPanel
                         >
-                    
-                        <FlowDocumentScrollViewer
-                            HorizontalContentAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            VerticalContentAlignment="Stretch"
-                            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                            ScrollViewer.VerticalScrollBarVisibility="Disabled"
-                            SizeChanged="FlowDocumentScrollViewer_SizeChanged"
-                            Document="{Binding Document}"
-                            >
-                        </FlowDocumentScrollViewer>
-                    </Border>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </ScrollViewer>
+                        <Button
+                            Margin="20,2,10,2"
+                            Foreground="Red"
+                            Content="Allow THIS tool all the time"
+                            Style="{DynamicResource TextBlockLikeButtonStyle}"
+                            Command="{Binding AllowThisToolAllTimeCommand}"
+                            />
+                        <Button
+                            Margin="20,2,10,2"
+                            Foreground="Red"
+                            Content="Allow ANY tool all the time"
+                            Style="{DynamicResource TextBlockLikeButtonStyle}"
+                            Command="{Binding AllowAnyToolAllTimeCommand}"
+                            />
+                    </StackPanel>
+                </xctk:SplitButton.DropDownContent>
+            </xctk:SplitButton>
+        </DataTemplate>
+
+        <dialog:DialogTemplateSelector
+            x:Key="DialogTemplateSelector"
+            ReplicContentTemplate="{StaticResource ReplicContentTemplate}"
+            ToolCallContentTemplate="{StaticResource ToolCallContentTemplate}"
+            />
+        
+    </UserControl.Resources>
+
+    <Grid>
+
+        <TextBlock
+            Name="ForegroundTextBlock"
+            Visibility="Collapsed"
+            Width="0"
+            Height="0"
+            />
+        <Button
+            Name="ForegroundButton"
+            Visibility="Collapsed"
+            Width="0"
+            Height="0"
+            />
+
+
+        <ScrollViewer
+            x:Name="ScrollViewerName"
+            HorizontalScrollBarVisibility="Auto"
+            VerticalScrollBarVisibility="Auto"
+            >
+            <ListView
+                x:Name="DialogListControl"
+                PreviewMouseWheel="OnFlowDocumentScrollViewerPreviewMouseWheel"
+                HorizontalAlignment="{Binding ElementName=DialogControlName, Path=HorizontalAlignment}"
+                VerticalAlignment="{Binding ElementName=DialogControlName, Path=VerticalAlignment}"
+                HorizontalContentAlignment="{Binding ElementName=DialogControlName, Path=HorizontalContentAlignment}"
+                VerticalContentAlignment="{Binding ElementName=DialogControlName, Path=VerticalContentAlignment}"
+                BorderBrush="{Binding ElementName=DialogControlName, Path=BorderBrush}"
+                BorderThickness="{Binding ElementName=DialogControlName, Path=BorderThickness}"
+                Foreground="{Binding ElementName=DialogControlName, Path=Foreground}"
+                Background="{Binding ElementName=DialogControlName, Path=Background}"
+                ItemsSource="{Binding ElementName=DialogControlName, Path=Dialog}"
+                ItemTemplateSelector="{StaticResource DialogTemplateSelector}"
+                Focusable="False"
+                >
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <ContentPresenter />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </ScrollViewer>
+    </Grid>
+
 </UserControl>
